# PUreCEngine3D

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  README.md  buenas-practicas.md  code-of-conduct.md  code-of-conduct.txt  code-of-conduct_en.md  code-of-conduct_en.txt  conanfile.txt  cpp.hint  modulos
Motor gráfico/: CMakeLists.txt
Motor gráfico/src/: Motor.cpp  Motor.h
Motor gráfico/terceros/imagenes/: imagen.cpp  imagen.h  png.cpp  png.h
Motor gráfico/terceros/opengl/: CMakeLists.txt
Motor gráfico/terceros/opengl/src/: opengl.cpp  opengl.h
audio/: CMakeLists.txt
audio/src/: audioBase.cpp  audioBase.h  exportar.h
audio/vendors/: CMakeLists.txt
audio/vendors/openAL/: CMakeLists.txt
audio/vendors/openAL/src/: audio.cpp  audio.h
cartucho/: CMakeLists.txt
cartucho/src/: cartucho.cpp  cartucho.h
components/: CMakeLists.txt
components/modulos/audio/: audio.cpp  audio.h
components/modulos/cameras/: camera.cpp  camera.h
components/modulos/code/: code.cpp  code.h
components/modulos/collider/: boxColliderComponent.cpp  boxColliderComponent.h  collider.cpp  collider.h
components/modulos/interface/: interfaceComponent.cpp  interfaceComponent.h
components/modulos/light/: light.cpp  light.h
components/modulos/physics/: rigidBody.cpp  rigidBody.h  rigidBodyComponent.cpp  rigidBodyComponent.h
components/modulos/renderables/: renderable.cpp  renderable.h  renderableComponent.cpp  renderableComponent.h
components/modulos/renderables/objects/: cube.cpp  cube.h  img.cpp  img.h  line.cpp  line.h  mesh.cpp  mesh.h  object.cpp  object.h  pixel.h  renderable.cpp  renderable.h  text.cpp  text.h
components/modulos/renderables/resources/: material.cpp  material.h  texture.cpp  texture.h
components/modulos/shader/: shader.cpp  shader.h  shaderComponent.cpp  shaderComponent.h  types.h
components/src/: codeBase.cpp  codeBase.h  component.cpp  component.h  entity.cpp  entity.h  estructurasCodigo.h  exportar.h  transform.cpp  transform.h
components/vendors/: CMakeLists.txt
components/vendors/mapsGenerator/: CMakeLists.txt  mapsGenerator.cpp  mapsGenerator.h
ejemplos/hormiguero/: CMakeLists.txt
ejemplos/hormiguero/src/: hormiga.cpp  hormiga.h  hormiguero.cpp  hormiguero.h  main.cpp  main.h
ejemplos/micraft/: CMakeLists.txt
ejemplos/micraft/src/: main.cpp  main.h
ejemplos/micraft/src/mapa/: terreno.cpp  terreno.h
graphics/: CMakeLists.txt
graphics/interface/: CMakeLists.txt
graphics/interface/extensiones/: CMakeLists.txt  imgui_ext.cpp  imgui_ext.h
graphics/interface/node_editors/: CMakeLists.txt  nodeGraphic.cpp  nodeGraphic.h
graphics/interface/node_editors/utilities/: builders.h
graphics/interface/src/: interfaceControl.cpp  interfaceControl.h
graphics/src/: motor.h  motorExport.h
graphics/src/collider/: box2dCollider.cpp  box2dCollider.h  ray.cpp  ray.h
graphics/src/log/: logEntity.cpp  logEntity.h
graphics/src/material/: materialFile.cpp__  materialFile.h__
graphics/src/modelos_graficos/: fbx.cpp  fbx.h  model.cpp  model.h  modelo.cpp  modelo.h  obj.cpp  obj.h
graphics/src/renderable/: cube.cpp  cube.h  img.cpp  img.h  line.cpp  line.h  mesh.cpp  mesh.h  object.cpp  object.h  pixel.cpp  pixel.h  renderable.cpp  renderable.h  text.cpp  text.h
graphics/terceros/imagenes/: imagen.cpp  imagen.h  png.cpp  png.h
graphics/terceros/opengl/: CMakeLists.txt
graphics/terceros/opengl/src/: opengl.cpp  opengl.h
graphics/terceros/opengl4/: CMakeLists.txt
graphics/terceros/opengl4/shaders/GLSL/: fragment_line X.glsl  fragment_line.glsl  fragment_solid_color.glsl  fragment_solid_colorTrans.glsl  fragment_solid_color_light.glsl  fragment_texture.glsl  gizmo_fragment_mesh.glsl  gizmo_vertex_mesh.glsl  shadow_map_fragment.glsl  shadow_map_fragment_dbg.glsl  shadow_map_vertex.glsl  shadow_map_vertex_dbg.glsl  vertex_basic.glsl  vertex_basic_mesh.glsl  vertex_line.glsl  vertex_texture.glsl
graphics/terceros/opengl4/src/: ____entity.h  entitygl4.h  opengl.cpp  opengl.h
graphics/terceros/opengl4/src/imgui/: imgui.ini  imgui_controles.cpp  imgui_controles.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  interface.cpp  (+7 more)
lib/resources/conDLL/: CMakeLists.txt
lib/resources/conDLL/src/: conDLLIMG.cpp  conDLLIMG.h
modules/: CMakeLists.txt  general.h
modules/audio/: audio.cpp  audio.h
modules/graphic/: interface.h  motor.cpp  motor.h
modules/physics/: physics.cpp  physics.h
modules/resources/: resource.h
modules/src/: module.cpp  module.h
modules/tape/: tape.cpp  tape.h
physics/jolt/: CMakeLists.txt
physics/jolt/src/: joltphysics.cpp  joltphysics.h
physics/jolt/src_jolt/: joltphysics_statica.cpp  joltphysics_statica.h
physics/physics 1.0/: CMakeLists.txt
physics/physics 1.0/src/: physics.cpp  physics.h
utilidades/: CMakeLists.txt
utilidades/errors/: error.h
utilidades/files/: filesControl.cpp  filesControl.h  font.h  ttfParser.h
utilidades/global/: config.h  constantes.h  global.cpp  global.h  input.cpp  input.h  mouse.cpp  mouse.h  node.h  screen.cpp  screen.h
utilidades/imports/: fbx.cpp  fbx.h  model.cpp  model.h  obj.cpp  obj.h
utilidades/librerias/: compile.cpp  compile.h  dll.cpp  dll.h
utilidades/log/: log.cpp  log.h  logFile.cpp  logFile.h
utilidades/math/: math.cpp  math.h
utilidades/modelos_graficos/: modelo.cpp  modelo.h  obj.cpp  obj.h
utilidades/nucleo/: screen.cpp  screen.h
utilidades/project/: UIDProject.h  _UIDProject.h  componentFile.cpp  componentFile.h  entityFile.cpp  entityFile.h  genericFile.cpp  genericFile.h  levelFile.cpp  levelFile.h  projectFile.cpp  projectFile.h
utilidades/project/serializer/: deserializer.cpp  deserializer.h  serializer.cpp  serializer.h
utilidades/supervisor/: CMakeLists.txt
utilidades/supervisor/src/: main.cpp  procesar.cpp  procesar.h  reflexivo.cpp  reflexivo.h
utilidades/timer/: timer.cpp  timer.h  watchdog.cpp  watchdog.h
utilidades/utiles/: handler.cpp  handler.h  pointer.cpp  pointers.h  string.cpp  string.h  utilidades.h
(+48 files in other folders)
